# controllers/auth.go
@@ -26,29 +26,29 @@ func RegisterUser(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-
-	// 密码哈希
+	// secret hashing
 	hashed, err := bcrypt.GenerateFromPassword([]byte(input.Password), bcrypt.DefaultCost)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "secret hashing failed"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "secret hashing failed"})
 		return
 	}
 	input.Password = string(hashed)
 
-	// 写入数据库
+	//Insert into the database
 	result, err := config.DB.Exec("INSERT INTO users (username, password) VALUES (?, ?)",
 		input.Username, input.Password)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	id, _ := result.LastInsertId()
 	input.ID = id
 
 	c.JSON(http.StatusOK, gin.H{"message": "Registration successful", "user": input})
+
 }
 
-// LoginUser 用户登录
+// LoginUser Users login
 // @Summary      User Login
 // @Description  User logs in with username and password
 // @Tags         Auth
@@ -61,41 +61,34 @@ func RegisterUser(c *gin.Context) {
 func LoginUser(c *gin.Context) {
 	var input models.LoginInput
 	if err := c.ShouldBindJSON(&input); err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Require parameter fails"})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Request parameter fails"})
 		return
 	}
-
-	// 从数据库读取
+	// read from database
 	var stored models.User
 	err := config.DB.QueryRow(`
         SELECT id, username, password
         FROM users WHERE username = ?`, input.Username).Scan(&stored.ID, &stored.Username, &stored.Password)
 	if err == sql.ErrNoRows {
-		//c.JSON(http.StatusUnauthorized, gin.H{"error": "User is not exist"})
 		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "User is not exist"})
 		return
 	} else if err != nil {
-		/*c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()}*/
 		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
-
-	// 验证密码
+	// Verify password
 	if err := bcrypt.CompareHashAndPassword([]byte(stored.Password), []byte(input.Password)); err != nil {
-		//c.JSON(http.StatusUnauthorized, gin.H{"error": "Password Error"})
 		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "Username or Password is incorrect"})
 		return
 	}
 
-	// 生成 JWT Token
+	// Generate JWT Token
 	tokenString, err := middlewares.GenerateToken(stored.ID, stored.Username)
 	if err != nil {
-		// c.JSON(http.StatusInternalServerError, gin.H{"error": "生成Token失败"})
 		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "GenerateToken Error"})
 		return
 	}
 	// return successfully
-	//c.JSON(http.StatusOK, gin.H{
 	c.JSON(http.StatusOK, models.LoginResponse{
 		Message: "Login successful",
 		Token:   tokenString,
