# docs/swagger.yaml
@@ -25,39 +25,19 @@ definitions:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6...
         type: string
     type: object
-  models.Message:
-    properties:
-      message:
-        type: string
-    type: object
-  models.Notification:
-    properties:
-      created_at:
-        type: string
-      id:
-        type: integer
-      is_read:
-        type: boolean
-      message:
-        type: string
-      task_id:
-        type: integer
-      user_id:
-        type: integer
-    type: object
   models.Task:
     properties:
       description:
         type: string
       due_date:
-        description: 到期时间
+        description: Expiration time
         type: string
       id:
         type: integer
       is_done:
         type: boolean
       reminded:
-        description: 是否已提醒
+        description: Has it been reminded
         type: boolean
       title:
         type: string
@@ -69,7 +49,6 @@ definitions:
       id:
         type: integer
       password:
-        description: 返回时可以省略密码
         type: string
       username:
         type: string
@@ -107,22 +86,6 @@ paths:
       summary: User Login
       tags:
       - Auth
-  /notifications:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Notification'
-            type: array
-      security:
-      - ApiKeyAuth: []
-      summary: Get User Notification
-      tags:
-      - Notifications
   /register:
     post:
       consumes:
@@ -160,97 +123,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get all tasks of the current user
-      tags:
-      - Tasks
-    post:
-      consumes:
-      - application/json
-      description: 为当前用户创建一个新任务
-      parameters:
-      - description: 任务内容
-        in: body
-        name: task
-        required: true
-        schema:
-          $ref: '#/definitions/models.Task'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.Task'
-      security:
-      - ApiKeyAuth: []
-      summary: Create Tasks
-      tags:
-      - Tasks
-  /tasks/{id}:
-    delete:
-      parameters:
-      - description: Task ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Message'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete Tasks
-      tags:
-      - Tasks
-    get:
-      parameters:
-      - description: 任务 ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Task'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Get a single task by ID
-      tags:
-      - Tasks
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: 任务 ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 任务内容
-        in: body
-        name: task
-        required: true
-        schema:
-          $ref: '#/definitions/models.Task'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Task'
-      security:
-      - ApiKeyAuth: []
-      summary: Update Tasks
       tags:
       - Tasks
 securityDefinitions:
