# routes/router.go
@@ -9,24 +9,19 @@ import (
 func SetupRouter() *gin.Engine {
 	r := gin.Default()
 
-	// 可选: 全局日志中间件
+	//  Global logging middleware
 	r.Use(middlewares.Logger())
 
-	// 用户相关路由
+	// related users route
 	r.POST("/register", controllers.RegisterUser)
 	r.POST("/login", controllers.LoginUser)
 
-	// 需要登录后才可访问
+	//Authentication required to access
 	auth := r.Group("/")
 	auth.Use(middlewares.AuthRequired())
 	{
-		auth.POST("/tasks", controllers.CreateTask)
 		auth.GET("/tasks", controllers.GetTasks)
-		auth.GET("/tasks/:id", controllers.GetTaskByID)
-		auth.PUT("/tasks/:id", controllers.UpdateTask)
-		auth.DELETE("/tasks/:id", controllers.DeleteTask)
 		// routes/router.go
-		auth.GET("/notifications", controllers.GetNotifications)
 	}
 
 	return r
